# CDSL

./: CMakeLists.txt
lib/: adeque.c  hashtable.c
